@@ -1003,8 +1003,8 @@ JsVar *jswrap_function_apply_or_call(JsVar *parent, JsVar *thisArg, JsVar *argsA
 
   if (jsvIsIterable(argsArray)) {
     argC = (unsigned int)jsvGetLength(argsArray);
-    if (argC>64) {
-      jsExceptionHere(JSET_ERROR, "Array passed to Function.apply is too big! Maximum 64 arguments, got %d", argC);
+    if (argC>JS_MAX_FUNCTION_ARGUMENTS) {
+      jsExceptionHere(JSET_ERROR, "Array passed to Function.apply is too big! Maximum "STRINGIFY(JS_MAX_FUNCTION_ARGUMENTS)" arguments, got %d", argC);
       return 0;
     }
     args = (JsVar**)alloca((size_t)argC * sizeof(JsVar*));
